# tomitaro

./: README.md  devbox.json
.kiro/specs/plant-monitoring-iot/: tasks.md  wants.md
docs/: design.md  requirements.md
docs/mimamori/: specifications.md
mimamori/: .env.example  .gitignore  README.md  adapter.py  cli.py  constants.py  elysia_client.py  main.py  model.py  pyproject.toml  test_send.py
mimamori/bot/: manifest.json  package.json  pnpm-lock.yaml  wrangler.toml
mimamori/dashboard/: compose.yml  main.tf  sync_d1.py
mimamori/database/: .terraform.lock.hcl  main.tf  variables.tf
mimamori/docs/: specifications.md
mimamori/esp32/: Cargo.toml
mimamori/nixos-raspberrypi/: .gitignore  flake.nix
mimamori/nixos-raspberrypi/modules/: tomitaro-app.nix  wifi.nix
mimamori/nixos-raspberrypi/secrets/: wireless.env.sample
mimamori/pico/: Cargo.toml
mimamori/server/: README.md  drizzle.config.ts  package.json  wrangler.jsonc
mimamori/server/apps/client/: package.json
mimamori/server/apps/client-cloudflare/: package.json  tsconfig.json
mimamori/server/apps/client-cloudflare/src/: index.ts
mimamori/server/apps/client/src/: index.ts
mimamori/server/apps/cloudflare/: package.json  wrangler.jsonc
mimamori/server/apps/cloudflare/src/: cloudflareRemoteCallback.ts  index.ts
mimamori/server/apps/local/: drizzle.config.ts  package.json
mimamori/server/apps/local/src/: index.ts
mimamori/server/scripts/: test_send.ts
mimamori/server/src/: index.ts
mimamori/server/src/db/: schema.ts
