[project]
name = "mimamori"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "pymodbus>=3.11.3",
    "pyserial>=3.5",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.48",
    "sqlalchemy-cloudflare-d1>=0.3.8",
]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]
